--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@
   -moz-osx-font-smoothing: grayscale;
 
 }
+;
+@layer utilities {
+  @keyframes modalAnimation {
+    0% {
+      transform: scale(0);
+    }
+    60% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  .animate-modal {
+    animation: modalAnimation 0.8s ease-out;
+  }
+}
