--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  /* color: rgba(255, 255, 255, 0.87); */
+  color: black;
   background-color: white;
 
   font-synthesis: none;
@@ -14,4 +14,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+}
+
+nav .active{
+  color: #1447e6;
+  font-weight: bold;
 }
